--- a/index.html
+++ b/index.html
@@ -98,12 +98,152 @@
 
 
       <section id="projects" class="section projects-section">
-        <div class="projects-header">
-          <h1 id="projects-text" class="projects-title">PROJECTS</h1>
+  <div class="projects-header">
+    <h1 id="projects-text" class="projects-title">PROJECTS</h1>
+  </div>
+
+  <div class="projects-grid">
+
+    <!-- CARD 1 -->
+    <div class="project-card">
+      <div class="card-front">
+        <span class="card-number">00-1</span>
+        <h3 class="card-title">WEB DESIGN</h3>
+      </div>
+      <div class="card-back">
+        <div class="card-header">
+          <span class="card-number">00-1</span>
+          <h3 class="card-title">// WEB DESIGN</h3>
         </div>
-        <h2>Projects</h2>
-        <p>Showcase selected projects with links and images.</p>
-      </section>
+        <div class="card-content">
+          <ul class="card-list">
+            <li>/ UI Mockups</li>
+            <li>/ Responsive Layouts</li>
+            <li>/ Web Animations</li>
+          </ul>
+          <img src="images/florence.png" alt="Web Design Example">
+        </div>
+        <p class="card-description">
+          My web design work focuses on creating clean, responsive, and user-friendly
+          interfaces with thoughtful animations to keep the experience engaging.
+        </p>
+      </div>
+    </div>
+
+
+    <!-- CARD 2 -->
+    <div class="project-card">
+      <div class="card-front">
+        <span class="card-number">00-1</span>
+        <h3 class="card-title">WEB DESIGN</h3>
+      </div>
+      <div class="card-back">
+        <div class="card-header">
+          <span class="card-number">00-1</span>
+          <h3 class="card-title">// WEB DESIGN</h3>
+        </div>
+        <div class="card-content">
+          <ul class="card-list">
+            <li>/ UI Mockups</li>
+            <li>/ Responsive Layouts</li>
+            <li>/ Web Animations</li>
+          </ul>
+          <img src="images/florence.png" alt="Web Design Example">
+        </div>
+        <p class="card-description">
+          My web design work focuses on creating clean, responsive, and user-friendly
+          interfaces with thoughtful animations to keep the experience engaging.
+        </p>
+      </div>
+    </div>
+
+
+    <!-- CARD 3 -->
+    <div class="project-card">
+      <div class="card-front">
+        <span class="card-number">00-1</span>
+        <h3 class="card-title">WEB DESIGN</h3>
+      </div>
+      <div class="card-back">
+        <div class="card-header">
+          <span class="card-number">00-1</span>
+          <h3 class="card-title">// WEB DESIGN</h3>
+        </div>
+        <div class="card-content">
+          <ul class="card-list">
+            <li>/ UI Mockups</li>
+            <li>/ Responsive Layouts</li>
+            <li>/ Web Animations</li>
+          </ul>
+          <img src="images/florence.png" alt="Web Design Example">
+        </div>
+        <p class="card-description">
+          My web design work focuses on creating clean, responsive, and user-friendly
+          interfaces with thoughtful animations to keep the experience engaging.
+        </p>
+      </div>
+    </div>
+
+
+    <!-- CARD 4 -->
+    <div class="project-card">
+      <div class="card-front">
+        <span class="card-number">00-1</span>
+        <h3 class="card-title">WEB DESIGN</h3>
+      </div>
+      <div class="card-back">
+        <div class="card-header">
+          <span class="card-number">00-1</span>
+          <h3 class="card-title">// WEB DESIGN</h3>
+        </div>
+        <div class="card-content">
+          <ul class="card-list">
+            <li>/ UI Mockups</li>
+            <li>/ Responsive Layouts</li>
+            <li>/ Web Animations</li>
+          </ul>
+          <img src="images/florence.png" alt="Web Design Example">
+        </div>
+        <p class="card-description">
+          My web design work focuses on creating clean, responsive, and user-friendly
+          interfaces with thoughtful animations to keep the experience engaging.
+        </p>
+      </div>
+    </div>
+
+
+
+    <!-- CARD 5 -->
+    <div class="project-card">
+      <div class="card-front">
+        <span class="card-number">00-1</span>
+        <h3 class="card-title">WEB DESIGN</h3>
+      </div>
+      <div class="card-back">
+        <div class="card-header">
+          <span class="card-number">00-1</span>
+          <h3 class="card-title">// WEB DESIGN</h3>
+        </div>
+        <div class="card-content">
+          <ul class="card-list">
+            <li>/ UI Mockups</li>
+            <li>/ Responsive Layouts</li>
+            <li>/ Web Animations</li>
+          </ul>
+          <img src="images/florence.png" alt="Web Design Example">
+        </div>
+        <p class="card-description">
+          My web design work focuses on creating clean, responsive, and user-friendly
+          interfaces with thoughtful animations to keep the experience engaging.
+        </p>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+
+
 
       <section id="journey" class="section">
         <h2>Journey</h2>
