finished projects section and started journey section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <!-- Header (fixed) -->
-  <header class="header">
+  <header id="header" class="header">
     <div class="logo">NICCOLÒ<br><span>TRONCONI</span></div>
     <nav class="menu">
       <ul>
@@ -37,9 +37,9 @@
         </div>
 
         <div class="hero-box">
-          <p>/ FINANCE</p>
-          <p>/ MANAGEMENT</p>
-          <p>/ TECH ENTHUSIAST</p>
+          <p>| FINANCE</p>
+          <p>| MANAGEMENT</p>
+          <p>| TECH ENTHUSIAST</p>
         </div>
 
         <p class="hero-description">
@@ -98,155 +98,176 @@
 
 
       <section id="projects" class="section projects-section">
-  <div class="projects-header">
-    <h1 id="projects-text" class="projects-title">PROJECTS</h1>
-  </div>
-
-  <div class="projects-grid">
-
-    <!-- CARD 1 -->
-    <div class="project-card">
-      <div class="card-front">
-        <span class="card-number">00-1</span>
-        <h3 class="card-title">WEB DESIGN</h3>
-      </div>
-      <div class="card-back">
-        <div class="card-header">
-          <span class="card-number">00-1</span>
-          <h3 class="card-title">// WEB DESIGN</h3>
+        <div class="projects-header">
+          <h1 id="projects-text" class="projects-title">PROJECTS</h1>
         </div>
-        <div class="card-content">
-          <ul class="card-list">
-            <li>/ UI Mockups</li>
-            <li>/ Responsive Layouts</li>
-            <li>/ Web Animations</li>
-          </ul>
-          <img src="images/florence.png" alt="Web Design Example">
+
+        <div class="projects-grid">
+
+          <!-- CARD 1 -->
+          <div class="project-card">
+            <div class="card-front">
+              <span class="card-number">001</span>
+              <h3 class="card-title">AIR TIME</h3>
+            </div>
+            <div class="card-back">
+              <div class="card-header">
+                <h3 class="card-title">[ AIR TIME ]</h3>
+              </div>
+              <div class="card-content">
+                <ul class="card-list">
+                  <li>| HISTORICAL MARKET OVERVIEW </li>
+                  <li>| MIXED-METHOD INTEGRATION</li>
+                  <li>| HYPE CYCLE EVALUATION</li>
+                  <li>| MARKET TREND STUDY</li>
+                  <li>| RESELL STRATEGIES</li>
+                </ul>
+                <img src="images/jumpman.jpg" alt="Jumpman Logo">
+              </div>
+              <p class="card-description">
+                WE USED A QUANTITATIVE AND QUALITATIVE APPROACH TO STUDY 
+                HOW THE SNEAKER RESELL SCENE WAS BORN AND HOW IT EVOLVED 
+                BOTH IN TERMS OF DEMOGRAPHICS AND TECHNOLOGY, IDENTIFYING 
+                THE PERIODS WHEN THE MARKET BOOMED AND WHEN IT DECLINED.
+              </p>
+            </div>
+          </div>
+
+
+          <!-- CARD 2 -->
+          <div class="project-card">
+            <div class="card-front">
+              <span class="card-number">002</span>
+              <h3 class="card-title">BATTLE SHIP</h3>
+            </div>
+            <div class="card-back">
+              <div class="card-header">
+                <h3 class="card-title">[ BATTLE SHIP ]</h3>
+              </div>
+              <div class="card-content">
+                <ul class="card-list">
+                  <li>| STRATEGY IMPLEMENTATION</li>
+                  <li>| PROGRAMMING SKILLS</li>
+                  <li>| ALGORITHM DESIGN</li>
+                  <li>| DATA ANALYSIS</li>
+                </ul>
+                <img src="images/battleship_density.png" alt="Density Graph">
+              </div>
+              <p class="card-description">
+                WE COMBINED CODING, STRATEGY DESIGN, AND DATA ANALYSIS TO 
+                TEST HOW DIFFERENT APPROACHES PERFORM IN THE GAME OF 
+                BATTLESHIP. THE RESULTS CONFIRMED THAT RANDOMNESS LEADS 
+                TO POOR PERFORMANCE, WHILE A PROBABILITY-DRIVEN APPROACH 
+                MAXIMIZES EFFICIENCY AND SUCCESS RATES.
+              </p>
+            </div>
+          </div>
+
+
+          <!-- CARD 3 -->
+          <div class="project-card">
+            <div class="card-front">
+              <span class="card-number">003</span>
+              <h3 class="card-title">SNEAKER BOT</h3>
+            </div>
+            <div class="card-back">
+              <div class="card-header">
+                <h3 class="card-title">[ SNEAKER BOT ]</h3>
+              </div>
+              <div class="card-content">
+                <ul class="card-list">
+                  <li>| WEB SCRAPING & INTERACTION</li>
+                  <li>| ANTI-BOT MANAGEMENT</li>
+                  <li>| CAPTCHA BYPASS</li>
+                  <li>| API HANDLING</li>
+                </ul>
+                <img src="images/stacce.jpeg" alt="Stacce">
+              </div>
+              <p class="card-description">
+                DEVELOPED A SNEAKER BOT, AN AUTOMATED SOLUTION TO 
+                PURCHASE LIMITED SHOES FASTER THAN MANUAL USERS. 
+                TESTED MULTIPLE METHODS TO BYPASS ANTI-BOT SYSTEMS 
+                AND CAPTCHAS. CODED 10+ MODULES TO AUTOMATE CHECKOUT 
+                PROCESSES ON CUSTOM WEB STORES, ACHIEVING SUB 5S CHECKOUT
+                TIMES.
+              </p>
+            </div>
+          </div>
+
+
+          <!-- CARD 4 -->
+          <div class="project-card">
+            <div class="card-front">
+              <span class="card-number">004</span>
+              <h3 class="card-title">SEPOLIA BART BUSINESS</h3>
+            </div>
+            <div class="card-back">
+              <div class="card-header">
+                <h3 class="card-title">[ SEPOLIA BART BUSINESS ]</h3>
+              </div>
+              <div class="card-content">
+                <ul class="card-list">
+                  <li>| ERC-721 IMPLEMENTATION</li>
+                  <li>| BACKEND DB MANAGEMENT</li>
+                  <li>| PIXEL ART GENERATION</li>
+                  <li>| FRONTEND DEVELOPMENT</li>
+                  <li>| WALLET BASED AIRDROP</li>
+                  <li>| SEPOLIA DEPLOY</li>                  
+                </ul>
+                <img src="images/nft.png" alt="Sepolia Bart Business NFT">
+              </div>
+              <p class="card-description">
+                DEVELOPED A FULL NFT DROP ON SEPOLIA: BUILT A WEBSITE 
+                FROM SCRATCH WITH A PYTHON BACKEND AND DATABASE, GENERATED 
+                NFTs RANDOMLY VIA PYTHON (IMAGES + METADATA) AND WROTE 
+                AN ERC-721 SMART CONTRACT FROM ZERO TO ENABLE MINTING AND 
+                AIRDROP.
+              </p>
+            </div>
+          </div>
+
+
+
+          <!-- CARD 5 -->
+          <div class="project-card">
+            <div class="card-front">
+              <span class="card-number">005</span>
+              <h3 class="card-title">THE TRUMP EFFECT</h3>
+            </div>
+            <div class="card-back">
+              <div class="card-header">
+                <h3 class="card-title">[ THE TRUMP EFFECT ]</h3>
+              </div>
+              <div class="card-content">
+                <ul class="card-list">
+                  <li>| CAPM AND FAMA-FRENCH CHECKS</li>
+                  <li>| HISTORICAL EVENTS MAPPING</li>
+                  <li>| MACROECONOMICAL ANALYSIS</li>
+                  <li>| PORTFOLIO SIMULATIONS</li>
+                  <li>| AR & CAR CALCULATIONS</li>
+                  <li>| CASE STUDIES</li>
+                </ul>
+                <img src="images/car.png" alt="Web Design Example">
+              </div>
+              <p class="card-description">
+                CONSTRUCTED A MASTER TIMELINE OF TRUMP’S 2025 POLICIES.
+                PERFORMED EVENT STUDIES. CONDUCTED MACROECONOMIC ANALYSIS
+                USING BEA, FRED AND BLS DATA TO QUANTIFY TARIFF EFFECTS ON
+                GDP, INFLATION, AND EMPLOYMENT AND CARRIED OUT FINANCIAL 
+                ANALYSIS TO MEASURE EQUITY RETURNS AND SECTORAL RESPONSES.              </p>
+            </div>
+          </div>
+
         </div>
-        <p class="card-description">
-          My web design work focuses on creating clean, responsive, and user-friendly
-          interfaces with thoughtful animations to keep the experience engaging.
-        </p>
-      </div>
-    </div>
+      </section>
 
 
-    <!-- CARD 2 -->
-    <div class="project-card">
-      <div class="card-front">
-        <span class="card-number">00-1</span>
-        <h3 class="card-title">WEB DESIGN</h3>
-      </div>
-      <div class="card-back">
-        <div class="card-header">
-          <span class="card-number">00-1</span>
-          <h3 class="card-title">// WEB DESIGN</h3>
+
+
+      <section id="journey" class="section journey-section">
+        <div class="journey-header">
+          <h1 id="journey-text" class="journey-title">JOURNEY</h1>
         </div>
-        <div class="card-content">
-          <ul class="card-list">
-            <li>/ UI Mockups</li>
-            <li>/ Responsive Layouts</li>
-            <li>/ Web Animations</li>
-          </ul>
-          <img src="images/florence.png" alt="Web Design Example">
-        </div>
-        <p class="card-description">
-          My web design work focuses on creating clean, responsive, and user-friendly
-          interfaces with thoughtful animations to keep the experience engaging.
-        </p>
-      </div>
-    </div>
-
-
-    <!-- CARD 3 -->
-    <div class="project-card">
-      <div class="card-front">
-        <span class="card-number">00-1</span>
-        <h3 class="card-title">WEB DESIGN</h3>
-      </div>
-      <div class="card-back">
-        <div class="card-header">
-          <span class="card-number">00-1</span>
-          <h3 class="card-title">// WEB DESIGN</h3>
-        </div>
-        <div class="card-content">
-          <ul class="card-list">
-            <li>/ UI Mockups</li>
-            <li>/ Responsive Layouts</li>
-            <li>/ Web Animations</li>
-          </ul>
-          <img src="images/florence.png" alt="Web Design Example">
-        </div>
-        <p class="card-description">
-          My web design work focuses on creating clean, responsive, and user-friendly
-          interfaces with thoughtful animations to keep the experience engaging.
-        </p>
-      </div>
-    </div>
-
-
-    <!-- CARD 4 -->
-    <div class="project-card">
-      <div class="card-front">
-        <span class="card-number">00-1</span>
-        <h3 class="card-title">WEB DESIGN</h3>
-      </div>
-      <div class="card-back">
-        <div class="card-header">
-          <span class="card-number">00-1</span>
-          <h3 class="card-title">// WEB DESIGN</h3>
-        </div>
-        <div class="card-content">
-          <ul class="card-list">
-            <li>/ UI Mockups</li>
-            <li>/ Responsive Layouts</li>
-            <li>/ Web Animations</li>
-          </ul>
-          <img src="images/florence.png" alt="Web Design Example">
-        </div>
-        <p class="card-description">
-          My web design work focuses on creating clean, responsive, and user-friendly
-          interfaces with thoughtful animations to keep the experience engaging.
-        </p>
-      </div>
-    </div>
-
-
-
-    <!-- CARD 5 -->
-    <div class="project-card">
-      <div class="card-front">
-        <span class="card-number">00-1</span>
-        <h3 class="card-title">WEB DESIGN</h3>
-      </div>
-      <div class="card-back">
-        <div class="card-header">
-          <span class="card-number">00-1</span>
-          <h3 class="card-title">// WEB DESIGN</h3>
-        </div>
-        <div class="card-content">
-          <ul class="card-list">
-            <li>/ UI Mockups</li>
-            <li>/ Responsive Layouts</li>
-            <li>/ Web Animations</li>
-          </ul>
-          <img src="images/florence.png" alt="Web Design Example">
-        </div>
-        <p class="card-description">
-          My web design work focuses on creating clean, responsive, and user-friendly
-          interfaces with thoughtful animations to keep the experience engaging.
-        </p>
-      </div>
-    </div>
-
-  </div>
-</section>
-
-
-
-
-      <section id="journey" class="section">
-        <h2>Journey</h2>
         <p>Timeline of your studies, experiences, and key achievements.</p>
       </section>
 
