added new about section currently under journey

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 
+  <div id="screen-warning">
+    <p>USE YOUR COMPUTER</p>
+  </div>
+
+
   <!-- Header (fixed) -->
   <header id="header" class="header">
     <div class="logo">NICCOLÒ<br><span>TRONCONI</span></div>
@@ -49,7 +54,7 @@
 
       <section id="about" class="section about-section">
         <div class="about-header">
-          <h1 id="about-text" class="about-title">ABOUT ME</h1>
+          <h1 id="about-text" class="about-title"></h1>
         </div>
 
         <div class="about-layout">
@@ -92,14 +97,13 @@
               </p>
             </div>
           </div>
-
         </div>
       </section>
 
 
       <section id="projects" class="section projects-section">
         <div class="projects-header">
-          <h1 id="projects-text" class="projects-title">PROJECTS</h1>
+          <h1 id="projects-text" class="projects-title"></h1>
         </div>
 
         <div class="projects-grid">
@@ -261,19 +265,28 @@
         </div>
       </section>
 
-
-
-
       <section id="journey" class="section journey-section">
-        <div class="journey-header">
-          <h1 id="journey-text" class="journey-title">JOURNEY</h1>
+        <div class="journey-header"> 
+          <h1 id="journey-text" class="journey-title"></h1> 
         </div>
-        <p>Timeline of your studies, experiences, and key achievements.</p>
+        <div class="journey-content">
+          <h2 class="journey-subtitle">FOR ME</h2>
+          <h1 class="journey-bigtext">
+            FINTECH <br>
+            IS NOT JUST <br>
+            BANKING, BUT <br>
+            A TOOL FOR EFFICIENCY <br>
+            AND PERFORMANCE.
+          </h1>
+          
+        </div>
       </section>
 
-      <section id="connect" class="section">
-        <h2>Connect</h2>
-        <p>Links to LinkedIn, GitHub, etc.</p>
+      <section id="connect" class="section connect-section">
+        <div class="connect-header">
+          <h1 id="connect-text" class="connect-title">CONNECT</h1>
+        </div>
+        <p>Timeline <br> yo<br>ur<br> s<br>tu<br>di<br>es, <br>exp<br>er<br>i<br>ences, and key achievements.</p>
       </section>
 
       <footer id="contact" class="section footer">
