fixed one description

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <div class="connect-header">
           <h1 id="connect-text" class="connect-title">CONNECT</h1>
         </div>
-        <p>Timeline <br> yo<br>ur<br> s<br>tu<br>di<br>es, <br>exp<br>er<br>i<br>ences, and key achievements.</p>
+        <p>Timeline your studies, experiences, and key achievements.</p>
       </section>
 
       <footer id="contact" class="section footer">
