--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
                 <div data-option="2"><span class="prompt">niccolo@cli ~ % </span>2) My Values</div>
                 <div data-option="3"><span class="prompt">niccolo@cli ~ % </span>3) My Hobbies</div>
                 <div data-option="4"><span class="prompt">niccolo@cli ~ % </span>4) What Drives Me</div>
-                <div data-option="5"><span class="prompt">niccolo@cli ~ % </span>5) Surprise!</div>
-                <div data-option="6"><span class="prompt">niccolo@cli ~ % </span>6) Clear Terminal</div>
+                <div data-option="5"><span class="prompt">niccolo@cli ~ % </span>5) Download CV</div>
+                <div data-option="6"><span class="prompt">niccolo@cli ~ % </span>6) Surprise!</div>
+                <div data-option="7"><span class="prompt">niccolo@cli ~ % </span>7) Clear Terminal</div>
               </div>
             </div>
           </div>
@@ -115,14 +116,16 @@
               </p>
             </div>
           </div>
+
+          <div class="projects-header">
+            <h1 id="projects-text" class="projects-title"></h1>
+          </div>
         </div>
       </section>
 
 
       <section id="projects" class="section projects-section">
-        <div class="projects-header">
-          <h1 id="projects-text" class="projects-title"></h1>
-        </div>
+        
 
         <div class="projects-grid">
 
@@ -283,23 +286,61 @@
         </div>
       </section>
 
-      <section id="journey" class="section journey-section">
-        <div class="journey-header"> 
-          <h1 id="journey-text" class="journey-title"></h1> 
-        </div>
-        <p>test</p>
-      </section>
 
       <section id="connect" class="section connect-section">
         <div class="connect-header">
-          <h1 id="connect-text" class="connect-title">CONNECT</h1>
+          <p class="connect-overline">E N T E R &nbsp; T H E &nbsp; E X C H A N G E</p>
+          <h1 class="connect-title">GREAT INNOVATION</h1>
+          <p class="connect-subline">S T A R T S &nbsp; W I T H</p>
+          <h1 class="connect-title">SHARED IDEAS</h1>
         </div>
-        <p>Timeline your studies, experiences, and key achievements.</p>
+
+        <!-- Connect Form -->
+        <form 
+          class="connect-form" 
+          action="https://formspree.io/f/xrbyqnqo" 
+          method="POST"
+        >
+          <div class="form-group">
+            <label for="name"></label>
+            <input type="text" id="name" name="name" placeholder="YOUR NAME*" required>
+          </div>
+
+          <div class="form-group">
+            <label for="phone"></label>
+            <input type="text" id="phone" name="phone" placeholder="PHONE*" required>
+          </div>
+
+          <div class="form-group">
+            <label for="email"></label>
+            <input type="email" id="email" name="email" placeholder="YOUR EMAIL*" required>
+          </div>
+
+          <div class="form-group">
+            <label for="message"></label>
+            <textarea id="message" name="message" rows="1" placeholder="WRITE YOUR THOUGHTS" required></textarea>
+          </div>
+
+          <button type="submit" class="connect-btn"><span>↵</span> Execute Order</button>
+        </form>
       </section>
 
-      <footer id="contact" class="section footer">
-        <h2>Contact Me</h2>
-        <p>Email: your@email.com</p>
+
+
+      <footer id="contact" class="footer">
+        <div class="footer-content">
+          <!-- Location + Time -->
+          <div class="footer-location">
+            Florence, Italy (GMT+2): <span id="local-time"></span>
+          </div>
+
+          <!-- Contact Info -->
+          <div class="footer-contact">
+            <p class="phone">+39 392 7277 995</p>
+            <p class="email">tronconiniccolo@gmail.com</p>
+
+          </div>
+        </div>
       </footer>
 
     </div>
@@ -307,5 +348,6 @@
 
   <script src="js/script.js"></script>
   <script src="js/cursor.js"></script>
+  <script src="js/connect.js"></script>
 </body>
 </html>
