--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@
 
   <!-- Header (fixed) -->
   <header id="header" class="header">
-    <div class="logo">NICCOLÒ<br><span>TRONCONI</span></div>
+    <a href="#landing" class="logo">NICCOLÒ<br><span>TRONCONI</span></a>
     <nav class="menu">
       <ul>
         <li><a href="#about">[ <span class="nav-word"> ABOUT ME </span>]</a></li>
         <li><a href="#projects">[ <span class="nav-word"> PROJECTS </span>]</a></li>
-        <li><a href="#journey">[ <span class="nav-word"> JOURNEY </span>]</a></li>
         <li><a href="#connect">[ <span class="nav-word"> CONNECT </span>]</a></li>
       </ul>
     </nav>
-    <a href="#contact" class="contact">CONTACT ME</a>
+    <a href="#connect" class="contact">CONTACT ME</a>
   </header>
 
   <!-- Smooth scroll wrapper -->
@@ -35,18 +34,21 @@
 
       <!-- Sections -->
       <section id="landing" class="section hero">
-        <h1 class="hero-title">FINTECH STUDENT</h1>
+        <h1 class="hero-title">MSc STUDENT</h1>
         <p class="hero-subtitle">BASED IN ITALY</p>
 
-        <div class="hero-media">
-          <img src="images/profile.jpg" alt="Profile picture" class="hero-image">
+        <div class="hero-box">
+          <div class="hero-text">
+            <p>| FINANCE</p>
+            <p>| MANAGEMENT</p>
+            <p>| TECH ENTHUSIAST</p>
+          </div>
+
+          <div class="hero-image-container">
+            <img src="images/profile.jpg" alt="Profile picture" class="hero-image">
+          </div>
         </div>
 
-        <div class="hero-box">
-          <p>| FINANCE</p>
-          <p>| MANAGEMENT</p>
-          <p>| TECH ENTHUSIAST</p>
-        </div>
 
         <p class="hero-description">
           FINTECH IS NOT JUST ABOUT BANKING. IT IS A TOOL FOR SOLVING INEFFICIENCIES AND INCREASE PERFORMANCE.
@@ -55,7 +57,7 @@
 
       <section id="about" class="section about-section">
         <div class="about-header">
-          <h1 id="about-text" class="about-title"></h1>
+          <h1 id="about-text" class="about-title">ABOUT&nbsp;ME</h1>
         </div>
 
         <div class="about-layout">
@@ -77,7 +79,7 @@
                 <div data-option="3"><span class="prompt">niccolo@cli ~ % </span>3) My Hobbies</div>
                 <div data-option="4"><span class="prompt">niccolo@cli ~ % </span>4) What Drives Me</div>
                 <div data-option="5"><span class="prompt">niccolo@cli ~ % </span>5) Download CV</div>
-                <div data-option="6"><span class="prompt">niccolo@cli ~ % </span>6) Surprise!</div>
+                <div data-option="6"><span class="prompt">niccolo@cli ~ % </span>6) Let's vibe!</div>
                 <div data-option="7"><span class="prompt">niccolo@cli ~ % </span>7) Clear Terminal</div>
               </div>
             </div>
@@ -118,7 +120,7 @@
           </div>
 
           <div class="projects-header">
-            <h1 id="projects-text" class="projects-title"></h1>
+            <h1 id="projects-text" class="projects-title">PROJECTS</h1>
           </div>
         </div>
       </section>
@@ -325,23 +327,32 @@
         </form>
       </section>
 
-
-
       <footer id="contact" class="footer">
         <div class="footer-content">
-          <!-- Location + Time -->
-          <div class="footer-location">
-            Florence, Italy (GMT+2): <span id="local-time"></span>
+          <!-- Left side: Socials + Location -->
+          <div class="footer-left">
+            <div class="footer-socials">
+              <a href="https://github.com/maybenicko" target="_blank" aria-label="GitHub">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="https://linkedin.com/in/niccolotronconi" target="_blank" aria-label="LinkedIn">
+                <i class="fab fa-linkedin"></i>
+              </a>
+            </div>
+            <div class="footer-location">
+              Florence, Italy (GMT+2): <span id="local-time"></span>
+            </div>
           </div>
 
-          <!-- Contact Info -->
+          <!-- Right side: Contact Info -->
           <div class="footer-contact">
             <p class="phone">+39 392 7277 995</p>
             <p class="email">tronconiniccolo@gmail.com</p>
-
           </div>
         </div>
       </footer>
+
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
     </div>
   </div>
