--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NT</title>
+  <title>NT | Niccolò Tronconi</title>
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans+Condensed" rel="stylesheet">
+  <link rel="icon" type="images/png" href="images/favicon_old.png">
 </head>
 <body>
   <canvas id="cursorScope"></canvas>
