--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
 
 
-  <!-- Header (fixed) -->
+  <!-- HEADER -->
   <header id="header" class="header">
     <a href="#landing" class="logo">NICCOLÒ<br><span>TRONCONI</span></a>
     <nav class="menu">
@@ -29,41 +29,35 @@
     <a href="#connect" class="contact">CONTACT ME</a>
   </header>
 
-  <!-- Smooth scroll wrapper -->
+  <!-- SCROLL CONTAINER -->
   <div class="scroll-container">
     <div class="scroll-content" id="scroll-content">
 
-      <!-- Sections -->
+      <!-- LANDING -->
       <section id="landing" class="section hero">
         <h1 class="hero-title">MSc STUDENT</h1>
         <p class="hero-subtitle">BASED IN ITALY</p>
-
         <div class="hero-box">
           <div class="hero-text">
             <p>| FINANCE</p>
             <p>| MANAGEMENT</p>
             <p>| TECH ENTHUSIAST</p>
           </div>
-
           <div class="hero-image-container">
             <img src="images/profile.jpg" alt="Profile picture" class="hero-image">
           </div>
         </div>
-
-
         <p class="hero-description">
           FINTECH IS NOT JUST ABOUT BANKING. IT IS A TOOL FOR SOLVING INEFFICIENCIES AND INCREASE PERFORMANCE.
         </p>
       </section>
 
+      <!-- ABOUT ME -->
       <section id="about" class="section about-section">
         <div class="about-header">
           <h1 id="about-text" class="about-title">ABOUT&nbsp;ME</h1>
         </div>
-
-        <div class="about-layout">
-          
-          <!-- Left: Game Window -->
+        <div class="about-layout">          
           <div class="about-window">
             <div class="terminal-header">
               <span class="terminal-btn red"></span>
@@ -85,8 +79,6 @@
               </div>
             </div>
           </div>
-
-          <!-- Right: All Text -->
           <div class="about-text">
             <div class="about-block">
               <h2>[ PARIS. TURIN. BERLIN. REPEAT. ]</h2>
@@ -97,7 +89,6 @@
                  Also, hi finance, nice to meet u.
               </p>
             </div>
-
             <div class="about-block">
               <h2>[ WHERE FINANCE MEETS TECH ]</h2>
               <p>
@@ -107,7 +98,6 @@
                 brain. Now I’m coping by coding this website instead of sleeping.
               </p>
             </div>
-
             <div class="about-block">
               <h2>[ THEM SIDE QUESTS ]</h2>
               <p>
@@ -119,20 +109,15 @@
               </p>
             </div>
           </div>
-
           <div class="projects-header">
             <h1 id="projects-text" class="projects-title">PROJECTS</h1>
           </div>
         </div>
       </section>
 
-
+      <!-- PROJECTS -->
       <section id="projects" class="section projects-section">
-        
-
         <div class="projects-grid">
-
-          <!-- CARD 1 -->
           <div class="project-card">
             <div class="card-front">
               <span class="card-number">001</span>
@@ -160,9 +145,6 @@
               </p>
             </div>
           </div>
-
-
-          <!-- CARD 2 -->
           <div class="project-card">
             <div class="card-front">
               <span class="card-number">002</span>
@@ -190,9 +172,6 @@
               </p>
             </div>
           </div>
-
-
-          <!-- CARD 3 -->
           <div class="project-card">
             <div class="card-front">
               <span class="card-number">003</span>
@@ -221,9 +200,6 @@
               </p>
             </div>
           </div>
-
-
-          <!-- CARD 4 -->
           <div class="project-card">
             <div class="card-front">
               <span class="card-number">004</span>
@@ -253,10 +229,6 @@
               </p>
             </div>
           </div>
-
-
-
-          <!-- CARD 5 -->
           <div class="project-card">
             <div class="card-front">
               <span class="card-number">005</span>
@@ -285,11 +257,10 @@
                 ANALYSIS TO MEASURE EQUITY RETURNS AND SECTORAL RESPONSES.              </p>
             </div>
           </div>
-
         </div>
       </section>
 
-
+      <!-- CONNECT -->
       <section id="connect" class="section connect-section">
         <div class="connect-header">
           <p class="connect-overline">E N T E R &nbsp; T H E &nbsp; E X C H A N G E</p>
@@ -297,8 +268,6 @@
           <p class="connect-subline">S T A R T S &nbsp; W I T H</p>
           <h1 class="connect-title">SHARED IDEAS</h1>
         </div>
-
-        <!-- Connect Form -->
         <form 
           class="connect-form" 
           action="https://formspree.io/f/xrbyqnqo" 
@@ -308,29 +277,25 @@
             <label for="name"></label>
             <input type="text" id="name" name="name" placeholder="YOUR NAME*" required>
           </div>
-
           <div class="form-group">
             <label for="phone"></label>
             <input type="text" id="phone" name="phone" placeholder="PHONE*" required>
           </div>
-
           <div class="form-group">
             <label for="email"></label>
             <input type="email" id="email" name="email" placeholder="YOUR EMAIL*" required>
           </div>
-
           <div class="form-group">
             <label for="message"></label>
             <textarea id="message" name="message" rows="1" placeholder="WRITE YOUR THOUGHTS" required></textarea>
           </div>
-
           <button type="submit" class="connect-btn"><span>↵</span> Execute Order</button>
         </form>
       </section>
 
+      <!-- FOOTER -->
       <footer id="contact" class="footer">
         <div class="footer-content">
-          <!-- Left side: Socials + Location -->
           <div class="footer-left">
             <div class="footer-socials">
               <a href="https://github.com/maybenicko" target="_blank" aria-label="GitHub">
@@ -344,20 +309,15 @@
               Florence, Italy (GMT+2): <span id="local-time"></span>
             </div>
           </div>
-
-          <!-- Right side: Contact Info -->
           <div class="footer-contact">
             <p class="phone">+39 392 7277 995</p>
             <p class="email">tronconiniccolo@gmail.com</p>
           </div>
         </div>
       </footer>
-
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
     </div>
   </div>
-
   <script src="js/script.js"></script>
   <script src="js/cursor.js"></script>
 </body>
