--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <!-- LANDING -->
       <section id="landing" class="section hero">
-        <h1 class="hero-title">JR CONSULTANT</h1>
+        <h1 class="hero-title">STRAT. ANALYST</h1>
         <p class="hero-subtitle">BASED IN ITALY</p>
         <div class="hero-box">
           <div class="hero-text">
